--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "usajobs-design-system",
-  "version": "1.11.0",
+  "version": "1.12.0",
   "description": "USAJOBS design system",
   "license": "SEE LICENSE in LICENSE.md",
   "bugs": {
@@ -24,31 +24,35 @@
     "design",
     "system"
   ],
+  "browserslist": [
+    "last 2 versions",
+    "not dead"
+  ],
   "repository": {
     "type": "git",
     "url": "http://github.com/USAJOBS/design-system.git"
   },
   "author": "Lab @ OPM",
   "contributors": [
-    "Min Chung <min.chung@opm.gov>",
-    "Matthew Dingee <matthew.dingee@opm.gov>",
     "Debbie LeNard <deborah.lenard@opm.gov>",
     "Quadrina Quinn <quadrina.quinn@opm.gov>",
+    "Min Chung",
+    "Matthew Dingee",
     "Kyhry Taylor",
     "Peter Toohey"
   ],
   "devDependencies": {
-    "autoprefixer": "^9.5.1",
+    "autoprefixer": "^9.7.4",
     "babel-preset-es2015": "^6.24.1",
-    "babelify": "^7.3.0",
+    "babelify": "^10.0.0",
     "bourbon": "4.3.4",
     "bourbon-neat": "^2.1.0",
-    "browser-sync": "^2.26.5",
-    "browserify": "^16.2.3",
+    "browser-sync": "^2.26.7",
+    "browserify": "^16.5.0",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
     "csswring": "^7.0.0",
-    "del": "^4.1.1",
+    "del": "^5.1.0",
     "fancy-log": "1.3.3",
     "gulp": "^4.0.2",
     "gulp-accessibility": "3.1.1",
@@ -56,27 +60,27 @@
     "gulp-cssnano": "^2.1.3",
     "gulp-jshint": "^2.1.0",
     "gulp-postcss": "^8.0.0",
-    "gulp-rename": "1.4.0",
+    "gulp-rename": "2.0.0",
     "gulp-run": "1.7.1",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
-    "gulp-stylelint": "^9.0.0",
+    "gulp-stylelint": "^13.0.0",
     "gulp-uglify": "^3.0.2",
-    "jshint": "^2.10.2",
+    "jshint": "^2.11.0",
     "jshint-stylish": "^2.2.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.1",
     "opener": "^1.5.1",
-    "prettier": "^1.17.1",
+    "prettier": "^1.19.1",
     "prettier-stylelint": "^0.4.2",
     "readmore-js": "^2.2.1",
-    "stylelint": "^10.0.1",
-    "stylelint-scss": "^3.6.1",
+    "stylelint": "^13.2.0",
+    "stylelint-scss": "^3.14.2",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
     "jquery": ">=3.4.0",
-    "npm": "^6.9.0",
+    "npm": "^6.14.2",
     "uswds": "^1.6.12"
   }
 }
